--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <p>2222</p>
       </div>
     </div>
+    <div class="credentials">
+        <p>stw</p>
+        <p>3333</p>
+      </div>
+    </div>
 
     <main class="app">
       <!-- BALANCE -->
